# graph-indexed-development

./: .gitignore  CHANGELOG.md  Cargo.toml  DRIFT_PROTOCOL.md  ISSUES.md  README.md  TODO-MASTER.md  package-lock.json
.gid/: graph.yml
.gid/docs/: issues-index.md
.gid/features/: STATUS.md
.gid/features/builtin-llm/: design.md
.gid/features/context-partitioning/: design.md  requirements.md
.gid/features/gid-context-tool/: design.md
.gid/features/gidterm-integration/: requirements.md
.gid/issues/: ISS-001-test-helper-refactor.md  ISS-002-configurable-edge-weights.md  ISS-003-clustering-fragmentation.md  ISS-003-investigation.md  ISS-004-teleportation-rate.md  ISS-005-directory-colocation.md  ISS-006-id-collision-split-mega.md  ISS-007-colocation-hardcoded-threshold.md  ISS-008-max-cluster-size-formula.md  ISS-009-co-citation-edges.md  ISS-010-symbol-similarity-edges.md  ISS-011-walkup-silent-fallback.md  ISS-012-confidence-weighted-edges.md  ISS-013-feature-infer-llm-integration.md  ISS-015-pragma-fk-in-transaction.md  ISS-016-lsp-pass1-dangling-edges.md  ISS-028-project-registry-cli.md  ISS-029-ritual-launcher-work-unit.md  ISS-030-rustclaw-start-ritual-tool.md  ISS-031-ritual-graph-phase-pollutes-existing-tasks.md  ISS-032-validate-cannot-repair.md  ISS-033-fk-cascade-not-enforced.md  ISS-034-tasks-summary-ignores-node-type-filter.md  ISS-035-code-graph-low-confidence-edges-pollute-queries.md  ISS-036-design-to-graph-skill-incomplete.md  ISS-037-deletenode-orphans-edges.md  ISS-038-implement-phase-no-output-postcondition.md  ISS-039-graph-phase-prompts-stale-and-unstructured.md  ISS-040-test-node-lookup-dead-branch.md  ISS-041-clippy-approx-constant-errors.md  ISS-042-clippy-warnings-cleanup-tracking.md  ISS-043-python-confidence-ladder-collapsed-tier.md  ISS-044-python-regex-recompiled-per-loop-iteration.md  ISS-045-infer-uses-own-deprecated-constant.md  ISS-046-only-used-in-recursion-rust-extractors.md  ISS-047-tasks-summary-uncounted-source-categories.md  ISS-048-test-helper-refactor.md  ISS-049-configurable-edge-weights.md
.gid/issues/ISS-003/: issue.md  (+1 more)
.gid/reviews/: design-context-review.md  design-history-review.md  design-migration-review.md  design-storage-review.md  iss-009-cross-layer-design-review.md  ritual-context-integration-design-review.md  sqlite-migration-master-storage-review.md  sqlite-migration-mig-hist-ctx-review.md  unified-graph-design-review.md  unified-graph-requirements-review-r2.md  unified-graph-requirements-review-r3.md  unified-graph-requirements-review-r4.md  unified-graph-requirements-review.md  unified-graph-tool-api-review.md
.gid/rituals/: r-16a27d.json  r-559511.json  r-86651f.json  r-8ec4cf.json  r-a131b6.json
crates/gid-cli/: Cargo.toml  README.md
crates/gid-cli/src/: api_llm_client.rs  llm_client.rs  main.rs  mcp.rs
crates/gid-core/: CHANGELOG.md  Cargo.toml
crates/gid-core/.gid/: execution-log.jsonl
crates/gid-core/src/: advise.rs  backfill_doc_path.rs  code_graph.rs  complexity.rs  config.rs  design.rs  graph.rs  history.rs  identity.rs  ignore.rs  lib.rs  lsp_client.rs  lsp_daemon.rs  project_registry.rs  query.rs  refactor.rs  repair.rs  unified.rs  unify.rs  validator.rs  visual.rs  watch.rs  working_mem.rs
crates/gid-core/src/artifact/: artifact.rs  id.rs  layout.rs  metadata.rs  mod.rs  relation.rs  store.rs
crates/gid-core/src/code_graph/: analysis.rs  build.rs  extract.rs  format.rs  mod.rs  query.rs  test_analysis.rs  tests.rs  types.rs
crates/gid-core/src/code_graph/lang/: python.rs  rust_lang.rs  typescript.rs
crates/gid-core/src/harness/: context.rs  mod.rs  scheduler.rs  telemetry.rs  types.rs
crates/gid-core/src/infer/: clustering.rs  integration.rs  labeling.rs  llm.rs  mod.rs
crates/gid-core/src/ritual/: api_llm_client.rs  approval.rs  artifact.rs  composer.rs  engine.rs  executor.rs  file_snapshot.rs  graph_phase_mode.rs  hooks.rs  llm.rs  mod.rs  scope.rs  skill_loader.rs  state_machine.rs  template.rs  v2_executor.rs  work_unit.rs
crates/gid-core/src/ritual/prompts/: generate_graph.txt  implement.txt  update_design.txt  update_graph.txt
crates/gid-core/src/storage/: error.rs  integration_tests.rs  migration.rs  mod.rs  schema.rs  sqlite.rs  trait_def.rs
crates/gid-core/src/validate/: mod.rs
crates/gid-core/src/validate/drift/: mod.rs
crates/gid-core/tests/: approval_test.rs  backfill_doc_path_integration.rs  frictionless_test.rs  incremental_test.rs  infer_integration_test.rs  phase_executor_test.rs  ritual_e2e.rs  ritual_resume.rs
crates/gid-harness/: Cargo.toml
crates/gid-harness/.gid/: execution-log.jsonl
crates/gid-harness/src/: executor.rs  lib.rs  replanner.rs  scheduler.rs  telemetry.rs  verifier.rs  worktree.rs
docs/: DESIGN-ritual.md  DESIGN-task-harness.md  requirements.md
(+73 files in other folders)
