[workspace]
resolver = "2"
members = ["crates/gid-core", "crates/gid-cli", "crates/gid-harness"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
tracing = "0.1"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
