[package]
name = "gid-dev-cli"
version = "0.3.1"
edition = "2021"
description = "Graph-Indexed Development CLI — graph-based project management and code analysis tool for AI agents"
license = "MIT"
repository = "https://github.com/tonitangpotato/graph-indexed-development"
keywords = ["graph", "development", "ai", "agent", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "gid"
path = "src/main.rs"

[dependencies]
gid-core = { path = "../gid-core", version = "0.3.1", features = ["full"] }
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dirs = "6"
agentctl-auth = { path = "../../../agentctl/crates/agentctl-auth", version = "0.1.0" }
