[package]
name = "gid-core"
version = "0.3.1"
edition = "2021"
description = "Graph-Indexed Development core library — graph-based project management and code analysis for AI agents"
license = "MIT"
repository = "https://github.com/tonitangpotato/graph-indexed-development"
keywords = ["graph", "development", "ai", "agent", "code-analysis"]
categories = ["development-tools", "data-structures"]

[features]
default = ["graph"]
graph = []
sqlite = ["graph", "dep:rusqlite"]
harness = ["graph", "dep:tokio", "dep:futures", "dep:async-trait", "dep:agentctl-auth", "dep:dirs", "dep:reqwest"]
ritual = ["harness", "dep:glob", "dep:which"]
full = ["ritual", "sqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Optional: SQLite storage backend
rusqlite = { version = "0.32", features = ["bundled", "backup"], optional = true }

# Optional dependencies for harness feature
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
agentctl-auth = { version = "0.1.0", path = "../../../agentctl/crates/agentctl-auth", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Optional dependencies for ritual feature
dirs = { version = "6", optional = true }
glob = { version = "0.3", optional = true }
which = { version = "6", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
