[package]
name = "gid-harness"
version = "0.1.0"
edition = "2021"
description = "Async execution engine for GID task harness — spawns sub-agents, manages worktrees, verifies, and recovers"

[dependencies]
gid-core = { path = "../gid-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
